--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-/* * {
+/* {
   border: 1px solid red;
 } */
 .page {
@@ -125,10 +125,182 @@
   line-height: 34px;
   font-size: 24px;
 }
+
+.digits {
+  padding: 100px 0px;
+}
+
+.flex-column-centered {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-title {
+  width: 60%;
+  margin: 0;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  z-index: 2;
+}
+
+.section-subtitle {
+  width: 60%;
+  margin: 0;
+  margin-top: 20px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  z-index: 2;
+}
+
+.table {
+  display: flex;
+  width: 1100px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  z-index: 2;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.table__text {
+  margin-top: 20px;
+  line-height: 1.2;
+  font-size: 18px;
+}
+
+.feynman {
+  height: 890px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  position: relative;
+  background-image: url("../images/feynman.png");
+  background-repeat: no-repeat;
+  background-position: 0% 100%;
+  background-color: #f2f2f2;
+}
+
+.delaem-krasivo__frame{
+  height: 790px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.feynman__title {
+  width: 648px;
+  margin: 0;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+}
+
+.feynman__subtitle {
+  margin: 0;
+  margin-top: 70px;
+  line-height: 51px;
+  font-size: 36px;
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  text-decoration: none;
+  color: #2f80ed;
+}
+
+.kaufman {
+  background-color: #1f1f1f;
+  padding: 90px 0px;
+  color: white;
+  overflow: hidden;
+  position: relative;
+}
+
+.kaufman__triangle {
+  height: 877px;
+  width: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: 1;
+}
+
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.footer {
+  min-height: 350px;
+  background-color: #1f1f1f;
+  padding: 60px 0px 40px;
+  color: white;
+}
+
+.footer__columns {
+  min-height: 250px;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__columns_content_copyright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footer__author {
+  margin-bottom: 18px;
+  line-height: 25px;
+  font-size: 18px;
+}
+
+
+.column__header {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+.column__links {
+  margin-top: 20px;
+  padding: 0;
+  list-style: none;
+}
+.column__link {
+  display: flex;
+  align-items: center;
+  margin-bottom: 16px;
+  line-height: 30px;
+  font-size: 18px;
+  color: white;
+  text-decoration: none;
+  font-weight: normal;
+}
+.social-icon {
+  height: 16px;
+  width: 16px;
+  margin-right: 10px;
 }
