--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,60 @@
 /* {
   border: 1px solid red;
 } */
+h1 {
+  margin: 0;
+  padding: 0;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+h2 {
+  margin: 0;
+  padding: 0;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+h3 {
+  margin: 0;
+  padding: 0;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
   /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
   /* выше установили ограничение по максимальной ширине */
-  margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  margin: 0 auto;
 }
 
 .header {
@@ -19,12 +64,11 @@
   max-height: 756px;
   position: relative;
   background-color: #f2f2f2;
+  align-items: center;
   /* выше установили ограничения для секции */
 }
 
 .header__title {
-  display: flex;
-  align-items: center;
   width: 730px;
   line-height: 96px;
   font-size: 102px;
@@ -144,6 +188,7 @@
   font-size: 60px;
   font-weight: bold;
   z-index: 2;
+  text-align: center;
 }
 
 .section-subtitle {
@@ -153,6 +198,7 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  text-align: center;
   z-index: 2;
 }
 
@@ -182,10 +228,9 @@
 }
 
 .feynman {
-  height: 890px;
+  min-height: 890px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
   align-items: center;
   position: relative;
   background-image: url("../images/feynman.png");
@@ -194,20 +239,14 @@
   background-color: #f2f2f2;
 }
 
-.delaem-krasivo__frame{
-  height: 790px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .feynman__title {
   width: 648px;
   margin: 0;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
+  margin-top: 100px;
+  text-align: center;
 }
 
 .feynman__subtitle {
@@ -215,6 +254,8 @@
   margin-top: 70px;
   line-height: 51px;
   font-size: 36px;
+  text-align: center;
+  font-weight: normal;
 }
 
 .feynman__link {
@@ -238,6 +279,9 @@
 .kaufman__triangle {
   height: 877px;
   width: 877px;
+  background-image: url("../images/kaufman-triangle.svg");
+  background-size: 877px 877px;
+  background-repeat: no-repeat;
   position: absolute;
   top: 0;
   right: -210px;
@@ -253,9 +297,14 @@
 
 .footer {
   min-height: 350px;
+  box-sizing: border-box;
   background-color: #1f1f1f;
   padding: 60px 0px 40px;
   color: white;
+}
+
+.logo_place_footer {
+  height: 35px;
 }
 
 .footer__columns {
@@ -265,7 +314,7 @@
   justify-content: space-between;
 }
 
-.footer__columns_content_copyright {
+.footer__column_content_copyright {
   flex-basis: 711px;
   display: flex;
   flex-direction: column;
@@ -273,33 +322,32 @@
 }
 
 .footer__author {
-  margin-bottom: 18px;
+  margin: 18px 0px;
   line-height: 25px;
   font-size: 18px;
 }
 
 
-.column__header {
+.footer__column-heading {
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
 }
-.column__links {
+.footer__column-links {
   margin-top: 20px;
+  margin-bottom: 16px;
   padding: 0;
-  list-style: none;
 }
-.column__link {
+.footer__column-link {
   display: flex;
   align-items: center;
-  margin-bottom: 16px;
   line-height: 30px;
   font-size: 18px;
   color: white;
   text-decoration: none;
   font-weight: normal;
 }
-.social-icon {
+.footer__social-icon {
   height: 16px;
   width: 16px;
   margin-right: 10px;
