--- a/styles/style.css
+++ b/styles/style.css
@@ -1,51 +1,12 @@
 /* {
   border: 1px solid red;
 } */
-h1 {
-  margin: 0;
-  padding: 0;
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-}
-
-h2 {
-  margin: 0;
-  padding: 0;
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-}
-
-h3 {
-  margin: 0;
-  padding: 0;
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-}
-
-p {
-  margin: 0;
-  padding: 0;
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
+.reset-style {
+  margin-top: 0;
+  margin-bottom: 0;
   list-style-type: none;
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
 }
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
