--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,3 +1,9 @@
+h1,h2,h3,h4,p,ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  list-style-type: none;
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -8,3 +14,7 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
   margin: 0 auto;
 }
+
+
+
+
