--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
 @import url(/blocks/page/page.css);
-@import url(/blocks/reset-style/reset-style.css);
+/* @import url(/blocks/reset-style/reset-style.css); */
 @import url(/blocks/description/description.css);
 @import url(/blocks/digits/digits.css);
 @import url(/blocks/feynman/feynman.css);
@@ -40,3 +40,13 @@
 @import url(/blocks/two-colums/__main-text/two-columns__main-text.css);
 @import url(/blocks/two-colums/__paragraph/two-columns__paragraph.css);
 @import url(/blocks/two-colums/__span-accent/two-columns__span-accent.css);
+@import url(/blocks/rotation/rotation.css);
+@import url(/blocks/techniques/techniques.css);
+@import url(/blocks/cards/cards.css);
+@import url(/blocks/cards/__item/cards__item.css);
+@import url(/blocks/cards/__image/cards__image.css);
+@import url(/blocks/cards/__title/cards__title.css);
+@import url(/blocks/cards/__description/cards__description.css);
+@import url(/blocks/video/video.css);
+@import url(/blocks/video/__iframes/video__iframes.css);
+@import url(/blocks/video/__iframe/video__iframe.css);
