--- a/blocks/rotation/rotation.css
+++ b/blocks/rotation/rotation.css
@@ -7,10 +7,7 @@
   }
 }
 /* не понял зачем тут предлагают использовать миксы */
-.header__square-pic {
+.rotation {
   animation: rotation 20s linear infinite;
 }
 
-.kaufman__triangle {
-  animation: rotation 20s linear infinite;
-}
