--- a/blocks/digits/digits.css
+++ b/blocks/digits/digits.css
@@ -1,3 +1,7 @@
 .digits {
   padding: 100px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
