--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   position: relative;
-  background-image: url("/images/feynman.png");
+  background-image: url("../../images/feynman.png");
   background-repeat: no-repeat;
   background-position: 0% 100%;
   background-color: #f2f2f2;
