--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,7 +1,7 @@
 .kaufman__triangle {
   height: 877px;
   width: 877px;
-  background-image: url("/images/kaufman-triangle.svg");
+  background-image: url("../../../images/kaufman-triangle.svg");
   background-size: 877px 877px;
   background-repeat: no-repeat;
   position: absolute;
