--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -1,6 +1,10 @@
 .kaufman {
   background-color: #1f1f1f;
   padding: 90px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   color: white;
   overflow: hidden;
   position: relative;
