--- a/blocks/resources/resources.css
+++ b/blocks/resources/resources.css
@@ -2,4 +2,8 @@
     box-sizing: border-box;
     padding-top: 100px;
     padding-bottom: 217px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
