--- a/blocks/techniques/techniques.css
+++ b/blocks/techniques/techniques.css
@@ -1,4 +1,8 @@
 .techniques {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding-top: 100px;
   width: 80%;
   margin: auto;
