--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,9 +1,3 @@
-h1,h2,h3,h4,p,ul {
-  margin-top: 0;
-  margin-bottom: 0;
-  list-style-type: none;
-}
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -15,6 +9,18 @@ h1,h2,h3,h4,p,ul {
   margin: 0 auto;
 }
 
+/* * {outline: 1px solid red;} */
 
+.header__title, .two-columns__brief, .section-title, .two-columns__brief,
+.feynman__title, .khan__title, .header__subtitle, 
+.two-columns__paragraph, .cards__description, .section-subtitle, 
+.table__text, .khan__author, .khan__quote, .khan__quote-author, 
+.khan__quote-author-subline, .footer__author, .cards, .table, 
+.resources__logo-zone, .footer__column-links {
+   margin: 0;
+   padding: 0;
+ }
 
-
+.cards, .table, .resources__logo-zone, .footer__column-links {
+  list-style-type: none;
+}
