--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -15,12 +15,13 @@
 .feynman__title, .khan__title, .header__subtitle, 
 .two-columns__paragraph, .cards__description, .section-subtitle, 
 .table__text, .khan__author, .khan__quote, .khan__quote-author, 
-.khan__quote-author-subline, .footer__author, .cards, .table, 
-.resources__logo-zone, .footer__column-links {
+.khan__quote-author-subline, .footer__author {
    margin: 0;
    padding: 0;
  }
 
 .cards, .table, .resources__logo-zone, .footer__column-links {
+  margin: 0;
+  padding: 0;
   list-style-type: none;
 }
