--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -9,18 +9,4 @@
   margin: 0 auto;
 }
 
-/* * {outline: 1px solid red;} */
-
-.header__title, .section-title, .two-columns__brief,
-.feynman__title, .khan__title, .header__subtitle, 
-.two-columns__paragraph, .cards__description, .section-subtitle, 
-.table__text, .khan__author, .khan__quote, .khan__quote-author, 
-.khan__quote-author-subline, .footer__author, .cards, .table, 
-.resources__logo-zone, .footer__column-links {
-   margin: 0;
-   padding: 0;
- }
-
-.cards, .table, .resources__logo-zone, .footer__column-links {
-  list-style-type: none;
-}
+* {outline: 1px solid red;} 
