--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,6 +1,8 @@
 .resources__logo-zone {
+    margin: 0;
     display: flex;
     justify-content: space-between;
     margin-top: 80px;
-    width: 1100px;
+    width: 1100px;    
+    list-style-type: none;
 }
