--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -1,4 +1,7 @@
 .table {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
   display: flex;
   width: 1100px;
   justify-content: space-between;
